--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
 
   <dependencies>
 
+<!--    <dependency>-->
+<!--      <groupId>com.google.code.gson</groupId>-->
+<!--      <artifactId>gson</artifactId>-->
+<!--      <version>2.10.1</version>-->
+<!--    </dependency>-->
+
+
     <!-- Servlet API -->
     <dependency>
       <groupId>jakarta.servlet</groupId>
@@ -63,6 +70,20 @@
       <artifactId>log4j-core</artifactId>
       <version>${log4j.version}</version>
     </dependency>
+
+    <!-- JUnit Jupiter -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.10.0-M1</version>
+      <scope>test</scope>
+    </dependency>
+      <dependency>
+          <groupId>org.mockito</groupId>
+          <artifactId>mockito-all</artifactId>
+          <version>3.4.0</version>
+          <scope>test</scope>
+      </dependency>
 
   </dependencies>
 
