--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,8 +6,10 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 <display-name>SocialPoll Web Application</display-name>
-<!--    <context-param>-->
-<!--        <param-name>org.apache.tomcat.util.buf.UDecoder.ALLOW_ENCODED_SLASH</param-name>-->
-<!--        <param-value>true</param-value>-->
-<!--    </context-param>-->
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/html/error.jsp</location>
+    </error-page>
+
 </web-app>
